--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу</title>
+    <title>Оренда кавомашин Харків, Київ | Вендінг | Bianchi</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
     <header class="header">
@@ -195,8 +197,10 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Безкоштовне обладнання</h5>
-                            <p class="card-text main-text-size">Встановлюємо будь-яку модель кавомашини <a href="./avtomaty.html">Автомат, Суперавтомат</a>  
-                                без орендної плати, під виконання обсягу реалізацій кави. Забезпечуємо тумбами під апарат та
+                            <p class="card-text main-text-size">Встановлюємо будь-яку модель кавомашини <a
+                                    href="./avtomaty.html">Автомат, Суперавтомат</a>
+                                без орендної плати, під виконання обсягу реалізацій кави. Забезпечуємо тумбами під
+                                апарат та
                                 рекламними матеріалами.</p>
                         </div>
                     </div>
@@ -339,37 +343,43 @@
             <div class="row">
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/franke.webp" class="scale" alt="franke fm-800"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/franke.webp" class="scale"
+                                alt="franke fm-800"></a>
                         <p>Franke FM-800</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/GaiaStyle.webp" class="scale" alt="Bianchi Gaia Style"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/GaiaStyle.webp" class="scale"
+                                alt="Bianchi Gaia Style"></a>
                         <p>Bianchi Gaia Style</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/wmf.webp" class="scale" alt="WMF 1500S"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/wmf.webp" class="scale"
+                                alt="WMF 1500S"></a>
                         <p>WMF 1500 S</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/GaiaTouch.webp" class="scale" alt="Bianchi Gaia Touch"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/GaiaTouch.webp" class="scale"
+                                alt="Bianchi Gaia Touch"></a>
                         <p>Bianchi Gaia Touch</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/carimali.webp" class="scale" alt="Carimali BlueDot"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/carimali.webp" class="scale"
+                                alt="Carimali BlueDot"></a>
                         <p>Franke FM-800</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/TaliaTouch.webp" class="scale" alt="Bianchi Talia Touch"></a>
+                        <a href="./avtomaty.html"><img src="./img/dlya_magazinov_i_setey/TaliaTouch.webp" class="scale"
+                                alt="Bianchi Talia Touch"></a>
                         <p>Bianchi Talia Touch</p>
                     </div>
                 </div>
@@ -447,6 +457,19 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
+    <!-- /////////////////////////////////////Toast///////////////////////////// -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="30000">
+            <div class="toast-header">
+                <img src="./img/logo_popup.webp" class="rounded me-2" alt="logo">
+                <strong class="me-auto">Бажаєте розрахувати собівартість напоїв?</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+            </div>
+            <div class="toast-body">
+                Скористайтеся нашим <a href="./index#calc">калькулятором</a>.
+            </div>
+        </div>
+    </div>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -497,7 +520,9 @@
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
