--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -335,7 +335,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
             </div>
             <div class="toast-body text-center fw-bold">
-                Скористайтесь нашим <a href="./index.html#calc">калькулятором</a>.
+                Скористайтесь нашим <a href="./dlya_magazinov_i_setey.html#calc">калькулятором</a>.
             </div>
         </div>
     </div>
