--- a/src/contacty.html
+++ b/src/contacty.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
+                            <li class="telephone text-nowrap">БІЛА ЦЕРКВА, УМАНЬ</li>
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380504400492">(050) 440-04-92</a>
                             </li>
@@ -251,7 +251,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>БІЛА ЦЕРКВА</b></h6>
+                <h6><b>БІЛА ЦЕРКВА, УМАНЬ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -336,7 +336,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
+                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль, Черкаси
                         </p>
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
@@ -351,7 +351,7 @@
                         </div>
                         <div class="row">
                             <div class="col footer-left">
-                                <h6>Біла Церква</h6>
+                                <h6>Біла Церква, Умань</h6>
                                 <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
