--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -493,7 +493,7 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="telh-sm">WMF 1500S</h3>
+                        <h3 class="text-center">WMF 1500S</h3>
                         <small>
                             <p class="lh-sm">WMF 1500S може робити величезну кількість різних напоїв використовуючи до 3
                                 бункерів - і все це при ширині в 32,5 см!</p>
