--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -394,7 +394,7 @@
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>КофемашиныСуперавтомат</h3>
+        <h3>Кофемашины Суперавтомат</h3>
     </div>
     <div class="description container">
         <div class="row">
@@ -492,7 +492,7 @@
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="telh-sm">WMF 1500S</h3>
+                        <h3 class="text-center">WMF 1500S</h3>
                         <small>
                             <p class="lh-sm">WMF 1500S может делать огромное количество различных напитков используя до 3
                                 бункеров – и все это при ширине в 32,5 см!</p>
