--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,28 @@
         src="https://www.facebook.com/tr?id=1211586936450413&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Facebook Pixel Code -->
+
+    <script>
+      $("#multiCarousel").carousel({
+        interval: 10000,
+      });
+      $(".carousel .carousel-item").each(function () {
+        var next = $(this).next();
+        if (!next.length) {
+          next = $(this).siblings(":first");
+        }
+        next.children(":first-child").clone().appendTo($(this));
+
+        for (var i = 0; i < 2; i++) {
+          next = next.next();
+          if (!next.length) {
+            next = $(this).siblings(":first");
+          }
+
+          next.children(":first-child").clone().appendTo($(this));
+        }
+      });
+    </script>
   </head>
 
   <body>
@@ -360,17 +382,14 @@
         </div>
       </div>
     </section>
-    
+
     <!-- /////////////////////////////////////////   Cards    ////////////////////////////////////////     -->
     <section class="indexicons">
       <div class="container indexcards">
         <div class="row gy-1">
           <div class="col">
             <div class="card text-center">
-              <img
-                src="./img/index/icon1.webp"
-                class="card-img-top"
-                alt="icon" />
+              <img src="./img/index/icon1.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
                 <h5 class="fw-bold">5000 + клієнтів</h5>
                 <p class="card-text main-text-size">
@@ -381,61 +400,52 @@
           </div>
           <div class="col">
             <div class="card text-center">
-              <img
-                src="./img/index/icon2.webp"
-                class="card-img-top"
-                alt="icon" />
+              <img src="./img/index/icon2.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
-                <h5 class="fw-bold">3 000 000 +  напоїв</h5>
+                <h5 class="fw-bold">3 000 000 + напоїв</h5>
                 <p class="card-text main-text-size">
-                  Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.
+                  Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі
+                  споживачі.
                 </p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card text-center">
-              <img
-                src="./img/index/icon3.webp"
-                class="card-img-top"
-                alt="icon" />
+              <img src="./img/index/icon3.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
                 <h5 class="fw-bold">24 регіони України</h5>
                 <p class="card-text main-text-size">
-                  В 24 регіонах України помітна наша присутність (завдяки вендінговій мережі).
+                  В 24 регіонах України помітна наша присутність (завдяки вендінговій
+                  мережі).
                 </p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card text-center">
-              <img
-                src="./img/index/icon4.webp"
-                class="card-img-top"
-                alt="icon" />
+              <img src="./img/index/icon4.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
                 <h5 class="fw-bold">Сервісне обслуговування</h5>
                 <p class="card-text main-text-size">
-                  Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного обслуговування.
+                  Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний
+                  спектр сервісного обслуговування.
                 </p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card text-center">
-              <img
-                src="./img/index/icon5.webp"
-                class="card-img-top"
-                alt="icon" />
+              <img src="./img/index/icon5.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
                 <h5 class="fw-bold">Максимальний прибуток</h5>
                 <p class="card-text main-text-size">
-                  Ми гарантуємо максимально можливий прибуток при роботі з нашими продуктами.
+                  Ми гарантуємо максимально можливий прибуток при роботі з нашими
+                  продуктами.
                 </p>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -448,9 +458,7 @@
             <a href="./dlya_magazinov_i_setey.html">
               <img src="./img/index/horeka.webp" class="card-img-top" alt="orenda" />
             </a>
-            <div class="bottom-left">
-              ОРЕНДА КАВОМАШИН
-            </div>
+            <div class="bottom-left">ОРЕНДА КАВОМАШИН</div>
           </div>
         </div>
         <div class="col-lg-6 p-1">
@@ -458,8 +466,27 @@
             <a href="./dlya_cafe_restoranov.html">
               <img src="./img/index/vending2.webp" class="card-img-top" alt="vending" />
             </a>
-            <div class="bottom-left">
-              ВЕНДІНГ
+            <div class="bottom-left">ВЕНДІНГ</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /////////////////////////////////////////   Carousel    ////////////////////////////////////////     -->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="slider">
+            <div class="slider__item">
+              <img data-lazy="./img/index/slider/necta_coro.png" alt="" />
+            </div>
+            <div class="slider__item">
+              <img data-lazy="./img/index/slider/rheavendors_minibona.png" alt="" />
+            </div>
+            <div class="slider__item">
+              <img data-lazy="./img/index/slider/bianchi_talea.png" alt="" />
+            </div>
+            <div class="slider__item">
+              <img data-lazy="./img/index/slider/bianchi_talea.png" alt="" />
             </div>
           </div>
         </div>
@@ -866,5 +893,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script src="js/modules/slick.min.js"></script>
   </body>
 </html>
