--- a/src/index.html
+++ b/src/index.html
@@ -451,12 +451,15 @@
     </section>
     <div class="container hr-line"></div>
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
-    <div class="container images mb-5">
+    <div class="container images text-center mb-5">
       <div class="row">
-        <div class="col-lg-6 p-1 text-center">
+        <div class="col-lg-6 p-1">
           <div class="indeximage">
             <a href="./dlya_magazinov_i_setey.html">
-              <img src="./img/index/horeka.webp" class="card-img-top" alt="orenda" />
+              <img
+                src="./img/index/horeka.webp"
+                class="card-img-top text-center"
+                alt="orenda" />
             </a>
             <div class="bottom-left">ОРЕНДА КАВОМАШИН</div>
           </div>
@@ -487,6 +490,68 @@
             </div>
             <div class="slider__item">
               <img data-lazy="./img/index/slider/bianchi_talea.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /////////////////////////////////////////   Сtimeline    ////////////////////////////////////////     -->
+    <div class="separator">
+      <h3>Що потрібно для співпраці</h3>
+    </div>
+    <div class="container timeline">
+      <div class="row">
+        <div class="col">
+          <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
+            <div class="timeline-step">
+              <div class="timeline-content">
+                <div class="inner-circle"></div>
+                <p class="num fw-bold">1</p>
+                <h5>Оформлення</h5>
+                <p class="lh-sm text-muted">
+                  <small>
+                    Залиште заявку на нашому сайті по телефону чи електронній пошті.
+                  </small>
+                </p>
+              </div>
+            </div>
+            <div class="timeline-step">
+              <div class="timeline-content">
+                <div class="inner-circle"></div>
+                <p class="num fw-bold">2</p>
+                <h5>Підтвердження</h5>
+                <p class="lh-sm text-muted">
+                  <small>
+                    Наш менеджер зв'яжеться з Вами та підготує для Вас найвігіднішу
+                    пропозицію, виходячи з ваших потреб.
+                  </small>
+                </p>
+              </div>
+            </div>
+            <div class="timeline-step">
+              <div class="timeline-content">
+                <div class="inner-circle"></div>
+                <p class="num fw-bold">3</p>
+                <h5>Встановлювання</h5>
+                <p class="lh-sm text-muted">
+                  <small>
+                    Ми в короткий термін встановимо кавомашину у Вашому закладі.
+                  </small>
+                </p>
+              </div>
+            </div>
+            <div class="timeline-step mb-0">
+              <div class="timeline-content">
+                <div class="inner-circle"></div>
+                <p class="num fw-bold">4</p>
+                <h5>Обслуговування</h5>
+                <p class="lh-sm text-muted">
+                  <small>
+                    Повний супровід та безкоштовна технична підримка протягом усього
+                    співробітництва.
+                  </small>
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -672,6 +737,25 @@
             <img src="./img/index/partner5-4.webp" alt="partner" />
           </div>
         </div>
+      </div>
+    </div>
+    <!-- /////////////////////////////////////Text///////////////////////////// -->
+    <div class="description container legal-text-size">
+      <div class="row">
+        <p class="legal-text-size">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi dicta
+          excepturi ea vitae. Tenetur itaque nulla ipsum corrupti quia omnis provident,
+          incidunt iusto velit tempora? Sapiente neque perferendis vitae.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi dicta
+          excepturi ea vitae. Tenetur itaque nulla ipsum corrupti quia omnis provident,
+          incidunt iusto velit tempora? Sapiente neque perferendis vitae.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi dicta
+          excepturi ea vitae. Tenetur itaque nulla ipsum corrupti quia omnis provident,
+          incidunt iusto velit tempora? Sapiente neque perferendis vitae.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi dicta
+          excepturi ea vitae. Tenetur itaque nulla ipsum corrupti quia omnis provident,
+          incidunt iusto velit tempora? Sapiente neque perferendis vitae.
+        </p>
       </div>
     </div>
     <!-- /////////////////////////////////////Toast///////////////////////////// -->
